# keyboard_pub

./: .gitignore  README.md  pyproject.toml
keyboard_pub/: __main__.py  connection.py  listener.py  scheduling.py  settings.py  translation.py
keyboard_pub/patch/: auth.py  keys.py
suhrob/: __main__.py  connection.py  listener.py  scheduling.py  storage.py
suhrob/keys/private_keys/: server.key_secret
